Bug 225825 - Undo of flatening image with a shape layer lose the shapes
Summary: Undo of flatening image with a shape layer lose the shapes
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2010-02-07 12:46 UTC by Cyrille Berger
Modified: 2010-03-02 14:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cyrille Berger 2010-02-07 12:46:51 UTC
* create new image
* add a shape
* flaten image
* undo

the shape is gone, happen in 2.1 and trunk.
Comment 1 Cyrille Berger 2010-03-02 14:27:52 UTC
SVN commit 1097936 by berger:

Fix: undoing flattening an image with a flake layer also remove the shapes

BUG: 225825



 M  +1 -1      kis_shape_controller.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1097936