Fix: undoing flattening an image with a flake layer also remove the shapes

BUG: 225825


svn path=/trunk/koffice/; revision=1097936